WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189859
Web Inspector: topContentInset is not accounted for when inspecting a WKWebView and docked to side
https://bugs.webkit.org/show_bug.cgi?id=189859
Summary
Web Inspector: topContentInset is not accounted for when inspecting a WKWebVi...
Blaze Burg
Reported
2018-09-21 14:20:47 PDT
Summary.
Attachments
Patch
(2.52 KB, patch)
2018-09-21 15:20 PDT
,
Blaze Burg
joepeck
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-09-21 14:23:19 PDT
<
rdar://problem/36091774
>
Blaze Burg
Comment 2
2018-09-21 15:20:13 PDT
Created
attachment 350439
[details]
Patch
Joseph Pecoraro
Comment 3
2018-09-21 15:29:24 PDT
Comment on
attachment 350439
[details]
Patch Oop! Nice
Blaze Burg
Comment 4
2018-09-24 10:38:07 PDT
Committed
r236411
: <
https://trac.webkit.org/changeset/236411
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug