Web Inspector: topContentInset is not accounted for when inspecting a WKWebView and docked to side https://bugs.webkit.org/show_bug.cgi?id=189859

Reviewed by Joseph Pecoraro.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::inspectedViewFrameDidChange):
Add special cases for inspecting a WKWebView. We already special-case for WKView.

Canonical link: https://commits.webkit.org/204863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236411 268f45cc-cd09-0410-ab3c-d52691b4dbfc